--- a/views/userView/home.ejs
+++ b/views/userView/home.ejs
@@ -169,10 +169,10 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="single-box-item first-box">
-                    <img src="img/f-box-1.jpg" alt="" />
+                    <img src="img/cvr1.jpg" alt="" />
                     <div class="box-text">
-                      <span class="trend-year">2019 Party</span>
-                      <h2>Jewelry</h2>
+                      <span class="trend-year">2024 Party</span>
+                      <h2>Luxury</h2>
                       <span class="trend-alert">Trend Allert</span>
                       <a href="#" class="primary-btn">See More</a>
                     </div>
@@ -180,10 +180,10 @@
                 </div>
                 <div class="col-lg-12">
                   <div class="single-box-item second-box">
-                    <img src="img/f-box-2.jpg" alt="" />
+                    <img src="img/cvr2.jpg" alt="" />
                     <div class="box-text">
-                      <span class="trend-year">2019 Trend</span>
-                      <h2>Footwear</h2>
+                      <span class="trend-year">2024 Trend</span>
+                      <h2>Elegance</h2>
                       <span class="trend-alert">Bold & Black</span>
                     </div>
                   </div>
@@ -194,7 +194,7 @@
               <div class="single-box-item large-box">
                 <img src="img/f-box-3.jpg" alt="" />
                 <div class="box-text">
-                  <span class="trend-year">2019 Party</span>
+                  <span class="trend-year">2024 Party</span>
                   <h2>Collection</h2>
                   <div class="trend-alert">Trend Allert</div>
                 </div>
@@ -263,7 +263,7 @@
           <div class="col-lg-4 offset-lg-1">
             <div class="lookbok-left">
               <div class="section-title">
-                <h2>2019 <br />#lookbook</h2>
+                <h2>2024 <br />#lookbook</h2>
               </div>
               <p>
                 Fusce urna quam, euismod sit amet mollis quis, vestibulum quis
