--- a/views/adminView/adminProductAdd.ejs
+++ b/views/adminView/adminProductAdd.ejs
@@ -27,7 +27,7 @@
 </div>
 <div class="form-group" style="padding-top: 3%;">
   <label for="productPrice" style="color:rgb(0, 0, 0); font-size: medium;">Product Price:</label>
-  <input type="number" class="form-control" id="productPrice" placeholder="Product price" name="prodRate" required>
+  <input type="number" min="0" class="form-control" id="productPrice" placeholder="Product price" name="prodRate" required>
 </div>
 <div class="form-group" style="padding-top: 3%;">
 
@@ -41,12 +41,12 @@
   </select>
 </div>
 <div class="form-group" style="padding-top: 3%;">
-  <label for="productQuantity" style="color:rgb(0, 0, 0); font-size: medium;">Product Quantity:</label>
-  <input type="number" class="form-control" id="productQuantity" placeholder="Product quantity" name="quantity" required>
+  <label for="productQuantity" min="0" style="color:rgb(0, 0, 0); font-size: medium;">Product Quantity:</label>
+  <input type="number" class="form-control" min="0" id="productQuantity" placeholder="Product quantity" name="quantity" required>
 </div>
 <div class="form-group" style="padding-top: 3%;">
   <label for="productImage" style="color:rgb(0, 0, 0); font-size: medium;">Product Image:</label><br>
-  <input type="file" class="form-control-file" id="productImage" name="images" multiple accept="image/*" required>
+  <input type="file" class="form-control-file" id="productImage" accept="image/*" name="images" multiple accept="image/*" required>
 </div>
 <br><br>
 <button type="submit" class="btn btn-primary" onclick="myFunction()">Save it</button>
