--- a/views/adminView/productManagement.ejs
+++ b/views/adminView/productManagement.ejs
@@ -15,7 +15,7 @@
       <div class="row gx-3">
         <form class="d-flex" role="search" method="post" >
             <div class="col-lg-4 col-md-6 me-auto">
-              <input type="search" placeholder="Search..." class="form-control" name="search" value="<%#= userSearch %>"/>
+              <input type="search" placeholder="Search..." class="form-control" name="search" value="<%#= productSearch %>"/>
             </div>
             </form>
       </div>
@@ -52,7 +52,7 @@
                     <input type="hidden" value="<%=p.name%>" name="oldName">
                     <input type="hidden" value="<%=p.category %>" name="oldCategory">
                      <input type="hidden" value="<%=p.rate %>" name="oldRate">
-                    <input type="hidden" value="<%=p.stock %>" name="oldStock"> 
+                    <input type="hidden"  value="<%=p.stock %>" name="oldStock"> 
                     <input  style="overflow: hidden;" type="hidden" value="<%=p.description %>" name="oldDesc"> 
                     <button class="btn btn-success" type="submit">Edit</button>
                     
