Product  Search done !!

--- a/views/userView/userProductCategory.ejs
+++ b/views/userView/userProductCategory.ejs
@@ -35,14 +35,14 @@
     </div>
 
     <!-- Search model -->
-    <div class="search-model">
+    <!-- <div class="search-model">
       <div class="h-100 d-flex align-items-center justify-content-center">
         <div class="search-close-switch">+</div>
         <form class="search-model-form">
           <input type="text" id="search-input" placeholder="Search here....." />
         </form>
       </div>
-    </div>
+    </div> -->
     <!-- Search model end -->
 
     <!-- Header Section Begin -->
@@ -65,7 +65,7 @@
             <ul>
               <li><a href="/">Home</a></li>
               <li>
-                <a href="/login">Shop</a>
+                <a href="/shop">Shop</a>
                 <!-- <ul class="sub-menu">
                                 <li><a href="product-page.html">Product Page</a></li>
                                 <li><a href="shopping-cart.html">Shopping Card</a></li>
@@ -90,7 +90,21 @@
           <div class="row">
             <div class="col-lg-12 text-center">
               <div class="section-title">
-                <h4>Product Category</h4>
+
+                  <div class="row">
+                    <div class="col-lg-6">
+                        <form  role="search" method="post" action="/search">
+                            <div class="col-6">
+                                <input type="search" placeholder="Search Here..." class="form-control" name="searchValue" value="<%=searchValue %>"/>
+                            </div>
+                        </form>
+                    </div>
+                
+                    <div class="col-lg-4">
+                      
+                    </div>
+                  </div>
+                
                 <hr />
                 <ul class="product-controls">
                   <% for(let i of category) {%>
@@ -235,5 +249,20 @@
     <script src="/js/jquery.nice-select.min.js"></script>
     <script src="/js/mixitup.min.js"></script>
     <script src="/js/main.js"></script>
+    <script>
+      // With JQuery
+$('#ex1').slider({
+	formatter: function(value) {
+		return 'Current value: ' + value;
+	}
+});
+
+// Without JQuery
+var slider = new Slider('#ex1', {
+	formatter: function(value) {
+		return 'Current value: ' + value;
+	}
+});
+    </script>
   </body>
 </html>
