--- a/views/userView/home.ejs
+++ b/views/userView/home.ejs
@@ -61,11 +61,11 @@
                      <a href="/signup">Register</a> 
                     <a href="/login" class="in">Logout</a>
                 </div> -->
-          <nav class="main-menu mobile-menu">
+          <nav class="main-menu mobile-menu"> 
             <ul>
               <li><a class="active" href="/">Home</a></li>
               <li>
-                <a href="#">Shop</a>
+                <a href="/shop">Shop</a>
                 <!-- <ul class="sub-menu">
                                 <li><a href="product-page.html">Product Page</a></li>
                                 <li><a href="shopping-cart.html">Shopping Card</a></li>
