wishlist view add delete completed

--- a/views/userView/home.ejs
+++ b/views/userView/home.ejs
@@ -53,9 +53,10 @@
             <a href="/"><img src="img/logo.png" alt="" /></a>
           </div>
           <div class="header-right">
-            <!-- <img src="img/icons/search.png" alt="" class="search-trigger">
-                    <img src="img/icons/man.png" alt=""> -->
-            <a href="/logout" class="logoutbtn">Logout</a>
+            <!-- <img src="img/icons/search.png" alt="" class="search-trigger">-->
+              <!-- <a href=""><img src="img/icons/man.png" class="p-2" alt=""></a> -->
+              <a href="/wishlist"><img src="img/icons/heart.png" class="p-2" alt=""></a>
+              <a href="/logout" class="logoutbtn p-2">Logout</a>
           </div>
           <!-- <div class="user-access">
                      <a href="/signup">Register</a> 
