--- a/views/adminView/adminHeader.ejs
+++ b/views/adminView/adminHeader.ejs
@@ -62,6 +62,11 @@
                         <span class="text">Coupon</span>
                     </a>
                 </li> -->
+                <li class="menu-item">
+                    <a class="menu-link" href="./offers"> <i class="icon material-icons md-check_circle"></i>
+                        <span class="text">Offers</span>
+                    </a>
+                </li>
             <br>
             <br>
         </nav>
