--- a/views/adminView/adminProductEdit.ejs
+++ b/views/adminView/adminProductEdit.ejs
@@ -145,6 +145,10 @@
                     value="<%=oldRate %>"
                     min="0"
                   /><br>
+                  <div class="form-group">
+                    <label for="username" style="font-size:large;">Offer</label>
+                    <input type="number" min="0" placeholder="Product offer" value="<%=oldoffer %>" class="form-control" id="offerValue" max="99" name="offer" >
+                  </div>
                   <label for="username" style="font-size:large;">Update Quantity</label>
                   <input
                     type="number"
