--- a/views/adminView/adminProductAdd.ejs
+++ b/views/adminView/adminProductAdd.ejs
@@ -1,5 +1,25 @@
 <%- include ('adminHeader') %>
 
+<style>
+  #image-preview {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .preview-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    overflow: hidden;
+    margin: 5px;
+  }
+  .preview-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+</style>
 <section class="content-main">
     <div class="content-header">
       <div>
@@ -55,8 +75,9 @@
 </div>
 <div class="form-group" style="padding-top: 3%;">
   <label for="productImage" style="color:rgb(0, 0, 0); font-size: medium;">Product Image:</label><br>
-  <input type="file" class="form-control-file" id="productImage" accept="image/*" name="images" multiple accept="image/*" required>
+  <input type="file" class="form-control-file" id="productImage" accept="image/*" name="images"  multiple accept="image/*" required>
 </div>
+<div id="image-preview" class="mt-3"></div>
 <br><br>
 <button type="submit" class="btn btn-primary" onclick="myFunction()">Save it</button>
 <a style="margin-left:40%" href="/admin/product" class="btn btn-danger">Go Back</a>
@@ -84,5 +105,33 @@
     }
   </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
+<script>
+document.getElementById('productImage').addEventListener('change', function(event) {
+  var files = event.target.files;
+  var imagePreview = document.getElementById('image-preview');
+  imagePreview.innerHTML = ''; // Clear previous previews
+  
+  for (var i = 0; i < files.length; i++) {
+    var file = files[i];
+    
+    var reader = new FileReader();
+    
+    reader.onload = (function(file) {
+      return function(e) {
+        var previewContainer = document.createElement('div');
+        previewContainer.className = 'preview-container';
+        var img = document.createElement('img');
+        img.src = e.target.result;
+        previewContainer.appendChild(img);
+        
+        imagePreview.appendChild(previewContainer);
+      };
+    })(file);
+    
+    reader.readAsDataURL(file);
+  }
+});
+</script>
   <%- include ('adminFooter') %>
