--- a/views/adminView/adminProductAdd.ejs
+++ b/views/adminView/adminProductAdd.ejs
@@ -79,7 +79,7 @@
 </div>
 <div id="image-preview" class="mt-3"></div>
 <br><br>
-<button type="submit" class="btn btn-primary" onclick="myFunction()">Save it</button>
+<button type="submit" class="btn btn-primary" >Save it</button>
 <a style="margin-left:40%" href="/admin/product" class="btn btn-danger">Go Back</a>
 </form>
 <p id="demo"></p>
