--- a/views/adminView/adminProductEdit.ejs
+++ b/views/adminView/adminProductEdit.ejs
@@ -111,7 +111,7 @@
           <div class="card">
             <div class="card-body">
               <!-- <h1 class="card-title text-center mb-4">Edit User</h1> -->
-              <form action="/admin/productUpdate" method="POST">
+              <form action="/admin/productUpdate" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                 <input type="hidden" name="oldProdName" value="<%=oldName %>">
                   <label for="username" style="font-size:large;">Enter new name</label>
@@ -147,7 +147,7 @@
                   /><br>
                   <div class="form-group">
                     <label for="username" style="font-size:large;">Offer</label>
-                    <input type="number" min="0" placeholder="Product offer" value="<%=oldoffer %>" class="form-control" id="offerValue" max="99" name="offer" >
+                    <input type="number" min="0" placeholder="Product offer" value="<%=oldOffer %>" class="form-control" id="offerValue" max="99" name="offer" >
                   </div>
                   <label for="username" style="font-size:large;">Update Quantity</label>
                   <input
@@ -166,6 +166,20 @@
                     name="newProdDesc"
                     value="<%=oldDesc %>"
                   /><br>
+                  <% for(let i=0; i<totalImages; i++){ %>
+                    <div class="row">
+                    <div style="display: flex; align-items: center;">
+                    <input type="text" value="<%=i %>" name="image <%=i %>" hidden >
+                    <img src="/<%= allOldData.image[i] %>" alt="image of <%= oldName %>" style="height: 100px; width: 130px; padding: 10px;">
+          <!-- <button style="margin-left: auto;" onclick="">Delete</button> -->
+          
+                    </div>
+                    <div><input name="<%=i%>Image" type="file" id="fileInput" class='form' >
+                    
+                    </div>
+                  </div>
+                <% } %>
+                <br>
                 <button type="submit" class="btn btn-primary btn-block">
                   Update
                 </button>
