admin order started

--- a/views/adminView/adminHeader.ejs
+++ b/views/adminView/adminHeader.ejs
@@ -52,21 +52,21 @@
                         <span class="text">category</span>
                     </a>
                 </li>
-                <!-- <li class="menu-item">
-                    <a class="menu-link" href="page-sellers-cards.html"> <i class="icon material-icons md-shopping_cart"></i>
+                <li class="menu-item">
+                    <a class="menu-link" href="./oders"> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Orders</span>
                     </a>
-                </li> -->
+                </li>
                 <!-- <li class="menu-item">
                     <a class="menu-link" href="page-form-product-1.html"> <i class="icon material-icons md-local_activity"></i>
                         <span class="text">Coupon</span>
                     </a>
                 </li> -->
-                <li class="menu-item">
+                <!-- <li class="menu-item">
                     <a class="menu-link" href="./offers"> <i class="icon material-icons md-check_circle"></i>
                         <span class="text">Offers</span>
                     </a>
-                </li>
+                </li> -->
             <br>
             <br>
         </nav>
