--- a/views/adminView/productManagement.ejs
+++ b/views/adminView/productManagement.ejs
@@ -13,11 +13,11 @@
     </div>
     <header class="card card-body mb-4">
       <div class="row gx-3">
-        <form class="d-flex" role="search" method="post" >
+        <!-- <form class="d-flex" role="search" method="post" >
             <div class="col-lg-4 col-md-6 me-auto">
               <input type="search" placeholder="Search..." class="form-control" name="search" value="<%#= productSearch %>"/>
             </div>
-            </form>
+            </form> -->
       </div>
     </header>
     <!-- card-header end// -->
@@ -34,7 +34,7 @@
                 <th style="color:rgb(0, 0, 0);font-size:small; text-align: center; ">Name</th>
                 <th style="color:rgb(0, 0, 0);font-size:small; text-align: center; ">Category</th>
                 <th style="color:rgb(0, 0, 0);font-size:small; text-align: center; ">Rate</th>
-                <th style="color:rgb(0, 0, 0);font-size:small; text-align: center; ">Offer</th>
+                <th style="color:rgb(0, 0, 0);font-size:small; text-align: center; ">Offer Price</th>
                 <th style="color:rgb(0, 0, 0);font-size:small; text-align: center; ">Stock</th>
                 <th style="color:rgb(0, 0, 0);font-size:small; text-align: center; width: 250px;">Description</th>
                <th style="color:rgb(0, 0, 0);font-size:small; text-align: center; ">Edit</th>
@@ -45,8 +45,13 @@
                 <td style="text-align: center;"><img src="<%= p.image[0] %>" style="padding:15%;" height="100px" width="100px" >  </td>
                 <td style="text-align: center;"><%=p.name %></td>
                 <td style="text-align: center;"><%=p.category %> </td>
-                <td style="text-align: center;">₹<%=p.rate %></td> 
-                <td style="text-align: center;"><%=p.offer %> %</td> 
+                <td style="text-align: center;">₹ <%=p.rate %></td> 
+                <% if (p.discountAmount != p.rate) { %>
+                  <td style="text-align: center;">₹ <%= p.discountAmount %></td>
+              <% } else { %>
+                  <td style="text-align: center;">No Offer!</td>
+              <% } %>
+              
                 <td style="text-align: center;"><%=p.stock %></td>
                 <td style="text-align:center;" class="description" title="<%=p.description %>"><%=p.description %></td> 
                 <td style="text-align: center;">
