--- a/views/adminView/adminProductEdit.ejs
+++ b/views/adminView/adminProductEdit.ejs
@@ -23,9 +23,9 @@
     <div class="screen-overlay"></div>
     <aside class="navbar-aside" id="offcanvas_aside">
         <div class="aside-top">
-            <a href="./" class="brand-wrap">
+            <!-- <a href="./" class="brand-wrap">
                 <img src="/assets/imgs/theme/logo.png" class="logo" alt="Finer Threads">
-            </a>
+            </a> -->
             <div>
                 <button class="btn btn-icon btn-aside-minimize"> <i class="text-muted material-icons md-menu_open"></i> </button>
             </div>
