--- a/views/userView/productPage.ejs
+++ b/views/userView/productPage.ejs
@@ -68,7 +68,7 @@
             <ul>
               <li><a href="/">Home</a></li>
               <li>
-                <a href="/login">Shop</a>
+                <a href="/shop">Shop</a>
                 <!-- <ul class="sub-menu">
                                 <li><a href="product-page.html">Product Page</a></li>
                                 <li><a href="shopping-cart.html">Shopping Card</a></li>
