cart product view and product add

--- a/views/userView/home.ejs
+++ b/views/userView/home.ejs
@@ -54,7 +54,7 @@
           </div>
           <div class="header-right">
             <!-- <img src="img/icons/search.png" alt="" class="search-trigger">-->
-              <!-- <a href=""><img src="img/icons/man.png" class="p-2" alt=""></a> -->
+              <a href="/cart"><img src="img/icons/cart.png" class="p-2" alt=""></a>
               <a href="/wishlist"><img src="img/icons/heart.png" class="p-2" alt=""></a>
               <a href="/logout" class="logoutbtn p-2">Logout</a>
           </div>
