--- a/views/userView/userProductPage.ejs
+++ b/views/userView/userProductPage.ejs
@@ -197,7 +197,7 @@
                   <input type="text" value="1" />
                 </div>
               </div>
-              <a href="#" class="primary-btn pc-btn">Add to cart</a>
+              <a href="/addToCart/<%=productDetails.name %>" class="primary-btn pc-btn">Add to cart</a>
               <a href="/wishlist/<%=productDetails.name %>"><img src="/img/icons/heart.png" class="p-3" alt=""></a>
 
 
