cart total price added

--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -119,7 +119,7 @@
                                 <input type="text" value="1">
                             </div>
                         </td>
-                        <td class="total"><%=i.totalPrice%></td>
+                        <td class="total">₹ <%=i.offerPrice%></td>
                         <td class="product-close">x</td>
                     </tr>
                 </tbody>
@@ -157,10 +157,10 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td class="total">$29</td>
-                                        <td class="sub-total">$29</td>
-                                        <td class="shipping">$10</td>
-                                        <td class="total-cart-p">$39</td>
+                                        <td class="total"></td>
+                                        <td class="sub-total"></td>
+                                        <td class="shipping"></td>
+                                        <td class="total-cart-p">₹ <%=totalPrice%></td>
                                     </tr>
                                 </tbody>
                             </table>
