Cart Product Delete

--- a/views/adminView/adminProductEdit.ejs
+++ b/views/adminView/adminProductEdit.ejs
@@ -174,7 +174,7 @@
           <!-- <button style="margin-left: auto;" onclick="">Delete</button> -->
           
                     </div>
-                    <div><input name="<%=i%>Image" type="file" id="fileInput" class='form' >
+                    <div><input name="<%=i%>Image" type="file" id="fileInput"  accept="image/*" class='form' >
                     
                     </div>
                   </div>
