--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -120,7 +120,7 @@
                             </div>
                         </td>
                         <td class="total">₹ <%=i.offerPrice%></td>
-                        <td class="product-close">x</td>
+                        <td class="product-close"><a href="/deleteItemCart/<%=i.product %>" class="btn btn-danger">x</a></td>
                     </tr>
                 </tbody>
                 <% } %>
