--- a/views/userView/userWishlist.ejs
+++ b/views/userView/userWishlist.ejs
@@ -96,7 +96,7 @@
                                                               <% } %>
                                                     </td>
                                                     <td>
-                                                        <a href="/addtocart/{{this.product}}" class="btn btn-primary">Add</a>
+                                                        <a href="/addToCart/<%=i.product %>" class="btn btn-primary">Add</a>
                                                     </td>
                                                     <td>
                                                         <a href="/deletewishlist/<%=i.product %>" class="btn btn-danger">Remove</a>
