maximum 5 quantity limited per person

--- a/views/userView/userProductPage.ejs
+++ b/views/userView/userProductPage.ejs
@@ -192,11 +192,11 @@
               <ul class="tags">
                 <li><span>Category :</span><%=productDetails.category %></li>
               </ul>
-              <div class="product-quantity">
+              <!-- <div class="product-quantity">
                 <div class="pro-qty">
                   <input type="text" value="1" />
                 </div>
-              </div>
+              </div> -->
               <a href="/addToCart/<%=productDetails.name %>" class="primary-btn pc-btn">Add to cart</a>
               <a href="/wishlist/<%=productDetails.name %>"><img src="/img/icons/heart.png" class="p-3" alt=""></a>
 
