--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -130,7 +130,6 @@
                           <p class="input-group form-control"
                              id="<%=i.product %>"><%=i.quentity %>
                           </p>
-                          
                           <div class="input-group-btn">
                             <button
                             class="btn btn-touchspin js-touchspin bootstrap-touchspin-up"
@@ -192,6 +191,9 @@
                             <div class="col-lg-12 text-right">
                                 <a href="#" class="primary-btn chechout-btn">Proceed to checkout</a>
                             </div>
+                            <!-- <div>
+                              <p style="color: red;">Maximum 5 products per person </p>
+                            </div> -->
                         </div>
                     </div>
                 </div>
